prd_package/objects/Master_Map__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Description__c</fullName>
        <description>Aircraft Model</description>
        <label>Aircraft Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Ver__c</fullName>
        <description>Cabin Ver.</description>
        <label>Cabin Ver.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_by_CA_s_station__c</fullName>
        <description>Check by CA&apos;s station</description>
        <label>Check by CA&apos;s station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checked_Procedure__c</fullName>
        <description>Checked Procedure</description>
        <label>Checked Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Primary External Key for master data</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Depend_On_Object2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to parent data level 2</description>
        <label>Depend On Object2</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Map (Depend On Object2)</relationshipLabel>
        <relationshipName>Master_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depend_On_Object_2_Code__c</fullName>
        <description>Refer to Primary External Key of parent data level 1 as relationship object</description>
        <formula>Depend_On_Object2__r.Code__c</formula>
        <label>Depend On Object 2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depend_On_Object_Code_F__c</fullName>
        <description>Refer to Primary External Key of parent data level 2  as relationship object</description>
        <formula>Depend_On_Object__r.Code__c</formula>
        <label>Depend On Object Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depend_On_Object_Name__c</fullName>
        <description>Refer to value of parent data level 1</description>
        <formula>Depend_On_Object__r.Name</formula>
        <label>Depend On Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depend_On_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to parent data level 1</description>
        <label>Depend On Object</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Master Maps</relationshipLabel>
        <relationshipName>Depend_On_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depend_On_Value__c</fullName>
        <description>Refer to value of parent data as text</description>
        <label>Depend On Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <description>Define type of safety equipment</description>
        <label>Equipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Define type of data</description>
        <externalId>true</externalId>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <description>Flight Number</description>
        <label>Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOPA_Concern_Location__c</fullName>
        <label>LOPA Concern Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Store parts location on specific aircraft</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pathto_E_Document__c</fullName>
        <label>Path to E-Document</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity_to_be_checked__c</fullName>
        <description>Store amount of parts on specific location of aircraft</description>
        <label>Quantity to be checked</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_System_Code__c</fullName>
        <description>Define source of Primary External Key</description>
        <externalId>true</externalId>
        <label>Source System Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Total number of equipment item</description>
        <label>Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Master Map</label>
    <listViews>
        <fullName>ATA_Chapter</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Check_by_CA_s_station__c</columns>
        <columns>Checked_Procedure__c</columns>
        <columns>Description__c</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity_to_be_checked__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>startsWith</operation>
            <value>ATA Chapter</value>
        </filters>
        <label>ATA Chapter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Check_by_CA_s_station__c</columns>
        <columns>Checked_Procedure__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity_to_be_checked__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>E-Document</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Part</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Check_by_CA_s_station__c</columns>
        <columns>Checked_Procedure__c</columns>
        <columns>Description__c</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity_to_be_checked__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>startsWith</operation>
            <value>Part</value>
        </filters>
        <label>Part</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Province</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Province</value>
        </filters>
        <label>Province</label>
    </listViews>
    <listViews>
        <fullName>Reason_for_rejection</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Reason for rejection</value>
        </filters>
        <label>Reason for rejection</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Safety_Equipment</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Check_by_CA_s_station__c</columns>
        <columns>Checked_Procedure__c</columns>
        <columns>Description__c</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity_to_be_checked__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>startsWith</operation>
            <value>Safety Equipment</value>
        </filters>
        <label>Safety Equipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_District</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Sales District</value>
        </filters>
        <label>Sales District</label>
    </listViews>
    <listViews>
        <fullName>Sales_Office</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Sales office</value>
        </filters>
        <label>Sales Office</label>
    </listViews>
    <listViews>
        <fullName>Sales_Organization</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Sales Organization</value>
        </filters>
        <label>Sales Organization</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Equipment</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Aircraft_Description__c</columns>
        <columns>Cabin_Ver__c</columns>
        <columns>Check_by_CA_s_station__c</columns>
        <columns>Checked_Procedure__c</columns>
        <columns>Description__c</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity_to_be_checked__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>startsWith</operation>
            <value>service equipment</value>
        </filters>
        <label>Service Equipment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Shipping_Condition</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Shipping Condition</value>
        </filters>
        <label>Shipping Condition</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Shipping_Type</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Object2__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Shipping Type</value>
        </filters>
        <label>Shipping Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Special_Processing_ID</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Source_System_Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Special Processing ID</value>
        </filters>
        <label>Special Processing ID</label>
    </listViews>
    <listViews>
        <fullName>Special_Province</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Depend_On_Object__c</columns>
        <columns>Depend_On_Value__c</columns>
        <columns>Description__c</columns>
        <columns>Field_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Name__c</field>
            <operation>equals</operation>
            <value>Special Province</value>
        </filters>
        <label>Special Province</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Map</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>